app/node/base/wrpc-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: wrpc-rate-limit
  namespace: kaspa
spec:
  rateLimit:
    average: 120
    burst: 240
    sourceCriterion:
      requestHost: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: wrpc-inflight-limit
  namespace: kaspa
spec:
  inFlightReq:
    amount: 1000
    sourceCriterion:
      requestHost: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: crowdsec-bouncer
  namespace: kaspa
spec:
  plugin:
    bouncer:
      enabled: true
      crowdsecMode: stream
      crowdsecLapiScheme: http
      crowdsecLapiHost: crowdsec-service.crowdsec.svc.cluster.local:8080
      crowdsecLapiPath: /
      crowdsecLapiKeyFile: /etc/traefik/crowdsec/BOUNCER_KEY_traefik
