app/node/base/kaspad.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaspad
  labels:
    app: kaspad
  namespace: kaspa
spec:
  # Headless service for stable network IDs in the StatefulSet
  clusterIP: None
  selector:
    app: kaspad
  ports:
    - name: grpc
      port: 16110
      targetPort: 16110
      protocol: TCP
    - name: rpc
      port: 16111
      targetPort: 16111
      protocol: TCP
    - name: wrpc-borsh
      port: 17110
      targetPort: 17110
      protocol: TCP
    - name: wrpc-json
      port: 18112
      targetPort: 18112
      protocol: TCP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kaspad
  namespace: kaspa
spec:
  serviceName: kaspad
  replicas: 1
  selector:
    matchLabels:
      app: kaspad
  template:
    metadata:
      labels:
        app: kaspad
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: kaspad
          image: kkluster/rusty-kaspa:master
          imagePullPolicy: Always
          command:
            - /sbin/tini
            - --
            - /app/kaspad
          args:
            - --appdir=/app/data
            - --yes
            - --nologfiles
            - --disable-upnp
            - --utxoindex
            - --rpclisten=0.0.0.0:16110
            - --rpclisten-borsh=0.0.0.0:17110
            - --rpclisten-json=0.0.0.0:18112
            - --externalip=$(NODE_IP)
          volumeMounts:
            - name: data
              mountPath: /app/data
          readinessProbe:
            tcpSocket:
              port: 16110
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 16110
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            limits:
              cpu: "4"
              memory: 16Gi
            requests:
              cpu: "3"
              memory: 8Gi

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 200Gi
